# AptinCoins

./: .gitignore  Cargo.toml  LICENSE  Move.toml  README
examples/: init.rs  mint_for_faucet.rs  mint_for_gao.rs  mint_for_gao2.rs  mint_for_gao3.rs  mint_for_me.rs  mint_for_song.rs  mint_for_vault.rs
sources/: coins.move
src/client/: account.rs  aptin_coin.rs  coins.rs  faucet.rs  mod.rs  rest.rs
